--- a/html/var/www/static/mbharata.com/index.html
+++ b/html/var/www/static/mbharata.com/index.html
@@ -15,7 +15,7 @@
             max-height: 100%;
         }
     </style>
-    <title>app-in.mbharata.com</title>
+    <title>mbharata.com</title>
 
 <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
 <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
@@ -25,6 +25,6 @@
 </head>
 <body>
     <img src="imgs/logo.png" alt="Mahabharata Logo"><br>
-    Welcome to app-in.mbharata.com
+    Welcome to mbharata.com
 </body>
 </html>
