--- a/html/var/www/static/app-th.mbharata.com/index.html
+++ b/html/var/www/static/app-th.mbharata.com/index.html
@@ -15,7 +15,12 @@
             max-height: 100%;
         }
     </style>
-    <title>app-th.mbharata.com
+    <title>app-th.mbharata.com</title>
+
+<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+<link rel="manifest" href="/site.webmanifest">
 </head>
 <body>
     <img src="imgs/logo.png" alt="Mahabharata Logo"><br>
