--- a/html/var/www/static/dev.mbharata.com/index.html
+++ b/html/var/www/static/dev.mbharata.com/index.html
@@ -15,12 +15,13 @@
             max-height: 100%;
         }
     </style>
-    <title>app-th.mbharata.com</title>
+    <title>dev.mbharata.com</title>
 
 <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
 <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
 <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
 <link rel="manifest" href="/site.webmanifest">
+
 </head>
 <body>
 <div>
@@ -28,7 +29,7 @@
 </div>
 <br><br>
 <div>
-<h1><font color=white>Welcome to app-th.mbharata.com</font></h1>
+<h1><font color=white>Welcome to dev.mbharata.com</font></h1>
 </div>
 </body>
 </html>
