--- a/html/var/www/static/app-in.mbharata.com/index.html
+++ b/html/var/www/static/app-in.mbharata.com/index.html
@@ -24,7 +24,12 @@
 
 </head>
 <body>
-    <img src="imgs/logo.png" alt="Mahabharata Logo"><br>
-    Welcome to app-in.mbharata.com
+<div>
+    <img src="imgs/logo.png" alt="Mahabharata Logo">
+</div>
+<br><br>
+<div>
+<h1><font color=white>Welcome to app-in.mbharata.com</font></h1>
+</div>
 </body>
 </html>
